Get back on track

--- a/vacation-spots/vacation-app/src/styles.css
+++ b/vacation-spots/vacation-app/src/styles.css
@@ -25,8 +25,6 @@
 
 .cards {
     background-color: #dfd9d885;
+    height: 1000px;
 }
 
-/* .navbar {
-    background-image: url("/vacation-app/");
-} */
