--- a/vacation-spots/vacation-app/src/styles.css
+++ b/vacation-spots/vacation-app/src/styles.css
@@ -28,3 +28,13 @@
     height: 1000px;
 }
 
+
+/* .navdiv {
+    background-image: url("../src/images/vacation-photo.jpg");
+    background-repeat: no-repeat;
+    width: 1000px;
+    margin-bottom: 10px;
+    height: 200px;  
+} */
+
+
