--- a/vacation-spots/vacation-app/src/styles.css
+++ b/vacation-spots/vacation-app/src/styles.css
@@ -1,4 +1,6 @@
-
+* {
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+}
 
 .winter {
     background-color: #74AFBF;
@@ -20,7 +22,13 @@
     margin-right: 10%;
     align-items: center;
     border-radius: 20px;
+}
 
+#card > h1 {
+    margin-bottom: 0px;
+}
+#card > p {
+    margin-top: 0px;
 }
 
 .cards {
@@ -28,13 +36,20 @@
     height: 1000px;
 }
 
+.titlePhoto {
+    margin-left: 25%;
+    margin-right: 25%;
+    width: 700px;
+}
 
-/* .navdiv {
-    background-image: url("../src/images/vacation-photo.jpg");
-    background-repeat: no-repeat;
-    width: 1000px;
-    margin-bottom: 10px;
-    height: 200px;  
-} */
+.navButton{
+    margin-left: 90%;
+}
 
+.navbar {
+    font-weight: 700;
+}
 
+.welcome {
+    text-align: center;
+}
