--- a/friends-with-pets/friends-app/src/styles.css
+++ b/friends-with-pets/friends-app/src/styles.css
@@ -1,5 +1,5 @@
 * {
-    background-color: #32AD9B;
+    background: #32AD9B;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
@@ -22,10 +22,25 @@ p {
     margin-top: 0px;
     margin-bottom: 5px;
     margin-right: 68%;
+    background:linear-gradient(210deg,#268879, #32AD9B);
+    border-top-right-radius: 15%;
+    border-bottom-right-radius: 15%
+    
 }
 
 
 
 h3 {
     margin-bottom: 0px;
+}
+
+.headerDiv > hr {
+    height: 1px;
+    background-color: #AD3245;
+    border: none;
+}
+
+.headerDiv{
+    margin-right: 14%;
+    margin-left: 3%;
 }
